name:                cautious-file
version:             1.0.2
Cabal-Version:	     >= 1.10
synopsis:            Ways to write a file cautiously, to reduce the chances of problems such as data loss due to crashes or power failures
description:         On non-Windows systems, posix-specific functions are used to reduce the chance of data loss further
category:            System
license:             BSD3
license-file:        LICENSE
copyright:	     Copyright (C) Robin Green 2009, 2011
author:              Robin Green
maintainer:          Robin Green <greenrd@greenrd.org>
build-type:	     Simple
stability:	     experimental
bug-reports:	     mailto:greenrd@greenrd.org
tested-with:	     GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.3 || ==8.6.5 || ==8.8.1
extra-source-files:      Test.hs

source-repository head
  type:     darcs
  location: http://patch-tag.com/r/greenrd/cautious-file

Flag posix
    description: Use POSIX-specific features
    default: True

Library
  hs-source-dirs:       src
  build-Depends:	base >= 4, base < 5, directory >= 1.1, directory < 1.4, filepath >= 1.2, filepath < 1.5, bytestring >= 0.9, bytestring < 0.11
  if flag(posix) && !os(Windows)
    cpp-options: -D_POSIX
    build-Depends: unix
    exposed-modules:    System.Posix.ByteLevel, System.Posix.Fsync
  exposed-modules:      System.IO.Cautious
  ghc-options:          -Wall

  build-tools: hsc2hs
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base, cautious-file, directory, random
  default-language: Haskell2010